# rust-gw2apiV1

./: Cargo.toml
src/: main.rs  main_depreciated.rs
